# subversa

./: .gitignore  CLAUDE.md  README.md  index.html  mise.toml  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARQUITETURA.md
e2e/: fixtures.ts  views.spec.ts
e2e/mock/: tauri.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/svn/: audit.rs  backup.rs  cancel.rs  commands.rs  conn.rs  hunk.rs  mod.rs  parser.rs  runner.rs  shelf.rs  types.rs  undo.rs
src/components/blame/: BlameModal.tsx
src/components/dialogs/: CheckoutDialog.tsx  ConflictDialog.tsx  CreateBranchDialog.tsx  EditRevisionMessageDialog.tsx  (+4 more)
src/hooks/: useActions.ts  useFocusTrap.ts  useHistory.ts  useSelectedWc.ts  useStatus.ts
src/lib/: api.ts  backup.ts  diff.test.ts  diff.ts  errors.ts  findreplace.test.ts  findreplace.ts  fuzzy.test.ts  fuzzy.ts  graph.test.ts  graph.ts  help.tsx  history.test.ts  history.ts  indent.test.ts  indent.ts  merge3.test.ts  merge3.ts  op.test.ts  op.ts  types.ts  utils.test.ts  utils.ts
src/store/: config.ts  confirm.ts  repoBrowser.ts  toast.ts  ui.ts  undo.ts  workspace.ts
src/styles/: index.css
src/views/: BackupsView.tsx  BranchesView.tsx  ChangesView.tsx  CommandLogView.tsx  GraphView.tsx  HistoryView.tsx  IncomingView.tsx  MergeView.tsx  OverviewView.tsx  ReposView.tsx  SettingsView.tsx  SetupView.tsx  _shared.tsx
(+64 files in other folders)
