[package]
name = "subversa"
version = "1.0.0"
description = "Subversa — cliente SVN desktop moderno"
authors = ["Daniel Souza"]
edition = "2021"
rust-version = "1.77"

[lib]
# O sufixo `_lib` é necessário para o nome da lib não conflitar com o binário no Windows.
name = "subversa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
